--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "devDependencies": {
     "@types/lodash": "^4.14.202",
+    "css-loader": "^6.9.1",
+    "css-minimizer-webpack-plugin": "^6.0.0",
     "html-webpack-plugin": "^5.6.0",
+    "less": "^4.2.0",
+    "less-loader": "^12.1.0",
+    "mini-css-extract-plugin": "^2.7.7",
     "react": "^18.2.0",
+    "style-loader": "^3.3.4",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
@@ -13,8 +19,7 @@
     "compile": "tsc"
   },
   "name": "webpack-ts",
-  "version": "1.0.0",
-  "main": "index.js",
+  "version": "1.0.2",
   "author": "Deribolot",
   "license": "MIT",
   "private": true,
