--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/node": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
     "@types/lodash": "^4.14.202",
+    "@types/react": "^18.2.51",
+    "@types/react-dom": "^18.2.18",
+    "babel-loader": "^9.1.3",
     "css-loader": "^6.9.1",
     "css-minimizer-webpack-plugin": "^6.0.0",
     "html-webpack-plugin": "^5.6.0",
     "less": "^4.2.0",
     "less-loader": "^12.1.0",
     "mini-css-extract-plugin": "^2.7.7",
-    "react": "^18.2.0",
     "style-loader": "^3.3.4",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
@@ -16,8 +22,8 @@
     "webpack-dev-server": "^4.15.1"
   },
   "scripts": {
-    "build": "webpack",
-    "start": "webpack serve --open",
+    "build": "webpack --mode development",
+    "start": "webpack serve --open --mode development",
     "compile": "tsc"
   },
   "name": "webpack-ts",
@@ -26,6 +32,8 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
