--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@babel/node": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@types/lodash": "^4.14.202",
     "@types/react": "^18.2.51",
     "@types/react-dom": "^18.2.18",
@@ -16,7 +17,6 @@
     "mini-css-extract-plugin": "^2.7.7",
     "style-loader": "^3.3.4",
     "ts-loader": "^9.5.1",
-    "typescript": "^5.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
@@ -34,6 +34,7 @@
   "dependencies": {
     "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "typescript": "^5.3.3"
   }
 }
