--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mini-css-extract-plugin": "^2.7.7",
     "style-loader": "^3.3.4",
     "ts-loader": "^9.5.1",
+    "typescript-plugin-css-modules": "^5.0.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
