--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@types/lodash": "^4.14.202",
     "@types/react": "^18.2.51",
     "@types/react-dom": "^18.2.18",
+    "@vue/preload-webpack-plugin": "^2.0.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.9.1",
     "css-minimizer-webpack-plugin": "^6.0.0",
+    "html-bundler-webpack-plugin": "^3.4.12",
     "html-webpack-plugin": "^5.6.0",
     "less": "^4.2.0",
     "less-loader": "^12.1.0",
