--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "webpack-dev-server": "^4.15.1"
   },
   "scripts": {
-    "build": "webpack --mode development",
-    "start": "webpack serve --open --mode development",
+    "build": "webpack --mode development --env theme=dark",
+    "start": "webpack serve --open --mode development --env theme=dark",
     "analyze": "webpack --profile --json > stats.json",
     "compile": "tsc"
   },
