--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/lodash": "^4.14.202",
     "@types/react": "^18.2.51",
     "@types/react-dom": "^18.2.18",
+    "@types/webpack-env": "^1.18.4",
     "@vue/preload-webpack-plugin": "^2.0.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.9.1",
@@ -24,7 +25,7 @@
     "webpack-dev-server": "^4.15.1"
   },
   "scripts": {
-    "build": "webpack --mode development --env theme=dark",
+    "build": "webpack --mode development --env theme=dark --node-env development",
     "start": "webpack serve --open --mode development --env theme=dark",
     "analyze": "webpack --profile --json > stats.json",
     "compile": "tsc"
