--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
+    "@module-federation/typescript": "^3.1.1",
     "@types/lodash": "^4.14.202",
     "@types/react": "^18.2.51",
     "@types/react-dom": "^18.2.18",
@@ -31,8 +32,8 @@
     "stats": "webpack --mode development --env stats=true > stats.txt",
     "compile": "tsc"
   },
-  "name": "webpack-ts",
-  "version": "1.0.2",
+  "name": "app",
+  "version": "2.0.0",
   "author": "Deribolot",
   "license": "MIT",
   "private": true,
