--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/webpack-env": "^1.18.4",
     "@vue/preload-webpack-plugin": "^2.0.0",
     "babel-loader": "^9.1.3",
+    "browserslist": "^4.23.0",
     "css-loader": "^6.9.1",
     "css-minimizer-webpack-plugin": "^6.0.0",
     "html-webpack-plugin": "^5.6.0",
@@ -44,5 +45,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^5.3.3"
-  }
+  },
+  "browserslist": [
+    "defaults"
+  ]
 }
